--- a/docs/docs/main/templates/ai.mdx
+++ b/docs/docs/main/templates/ai.mdx
@@ -5,6 +5,9 @@ keywords:
     - ai scaffold
     - ai boilerplate
     - ai generator
+    - chatgpt
+    - Large Language Models
+    - code gen
 sidebar_label: ai (alpha)
 ---
 
