--- a/docs/docs/main/templates/ai.mdx
+++ b/docs/docs/main/templates/ai.mdx
@@ -292,7 +292,7 @@ Need some inspiration on what you can do? Here are some examples:
 
 -   `tps ai`: Create a jest.config.js file to run tests for my Node.js library,
     which is currently written in JavaScript. Include at least one test file
-    located in the \_\_test\_\_ folder.
+    located in the \_\_tests\_\_ folder.
 
 -   `tps ai`: Create a GitHub Action file for my Node.js library. The action,
     named ci, should run npm test using Node.js v18. It should trigger on pull
