--- a/docs/docs/main/templates/index.mdx
+++ b/docs/docs/main/templates/index.mdx
@@ -15,3 +15,4 @@ collaborate to bring even more value to the community!
 -   [yargs-cli-cmd](./templates/yargs-cli-cmd)
 -   [express-app (alpha)](./templates/express-app)
 -   [react-app (alpha)](./templates/react-app)
+-   [ai (alpha)](./templates/ai)
