--- a/docs/docs/main/create-new-template/templates.mdx
+++ b/docs/docs/main/create-new-template/templates.mdx
@@ -172,318 +172,7 @@ mkdir .tps/<template-name>/default
   </TabItem>
 </Tabs>
 
-## Generating a new instance
+## Generating a instance
 
-### What is a new instance
-
-Generating a new instance of a template, also known as template instantiation or
-the template instantiation process, refers to the action of utilizing a template
-as a starting point to create a new instance. It involves rendering the files
-and folders from the template folder and transferring them to the **build
-path(s)**.
-
-<br />
-<br />
-
-```mermaid
-graph LR;
-    step1("User generates a
-    new instance")
-    step2("Tps loads all files
-    and folders from packages")
-    step3("Tps creates a directory
-    for the passed build path")
-    step4("Creates all needed files and
-    folders inside each build path")
-    step1-->step2;
-    step2-->step3;
-    step3-->step4;
-```
-
-<br />
-<br />
-
-The `build path` is the information you provide to TPS to specify the location
-and details of the new template to be created. It can be thought of as the name
-or identifier for the new template. When TPS receives the build path, it creates
-a directory with that name and renders all the files and folders from your
-template packages into this newly created directory. In essence, the build path
-acts as a directive to TPS, guiding it in assembling the new template by
-organizing the appropriate files and folders in the designated directory.
-
-### Single build path
-
-When the build path is a single word, tps utilizes it as the name for your new
-instance. It then generates a fresh directory with the given name within the
-current directory you are in, and proceeds to render all contents within the
-newly created directory.
-
-```text
-// highlight-next-line
-app
-|__|
- ^ Build path & template name
-```
-
-<Example>
-
-If we were generating a new instance from a template and we have the build path
-`app` then templates will create a new directory called `app` and render all
-contents inside of it
-
-```text title="Template structure"
-| - .tps/
-    // highlight-start
-    | - node-server/
-        | - default/
-            | - server.js
-            | - package.json
-    // highlight-end
-```
-
-```text title="Rendered instance"
-// highlight-start
-| - app/
-    | - server.js
-    | - package.json
-// highlight-end
-```
-
-</Example>
-
-### Long build path
-
-If you give tps a long build path, it uses it as the path to create your new
-template. The last word becomes the template name, and the words before that
-show which directory you want the new instance to be in. If the directory doesnt
-exist, tps will create it.
-
-```text
-// highlight-next-line
-some/path/app
-          |__| <- template name
-|____________|
-    ^ Build path
-```
-
-<Example>
-
-If we were generating a new instance from a template and we have the build path
-`code/projects/app` then templates will create a new directory called `app`
-inside of `<cwd>/code/projects` and render all contents inside of it.
-
-```text title="Template structure"
-| - .tps/
-    // highlight-start
-    | - node-server/
-        | - default/
-            | - server.js
-            | - package.json
-    // highlight-end
-```
-
-```text title="Rendered instance"
-|- code
-    |- projects
-        // highlight-start
-        | - app/
-            | - server.js
-            | - package.json
-        // highlight-end
-```
-
-</Example>
-
-### Multiple build paths
-
-You can also pass in multiple build paths at the same time. This is going to be
-the same as passing in one but for each one.
-
-<Example>
-
-If we were generating a new instance from a template and we have the build paths
-`code/projects/app` & `code/projects/app2` then templates will create new
-directories for both and render contents into both of them.
-
-```text title="Template structure"
-| - .tps/
-    // highlight-start
-    | - node-server/
-        | - default/
-            | - server.js
-            | - package.json
-    // highlight-end
-```
-
-```text title="Rendered instance"
-|- code
-    |- projects
-        // highlight-start
-        | - app/
-            | - server.js
-            | - package.json
-        | - app2/
-            | - server.js
-            | - package.json
-        // highlight-end
-```
-
-</Example>
-
-### How to generate a new instance
-
-There are two ways on how to generate a new instance of a template. One is via
-our command line tool or by our `node_module` package. We wont go deep into this
-topic right now but here are some basics.
-
-`<template-to-use>` is the name of the template you would like to use.
-
-:::tip
-
-Not sure what templates you have? Check out our
-[list command](../../api/cli#list)
-
-:::
-
-`<build-paths...>` is the location/name of where you want your new rendered
-template to go
-
-<Tabs groupId="cli-node">
-  <TabItem value="tps" label="tps cli" default>
-
-```bash
-# create command
-
-tps create --use=<template-to-use> <build-paths...>
-
-# or use command
-
-tps <template-to-use> <build-paths...>
-```
-
-  </TabItem>
-  <TabItem value="node" label="Node">
-
-```js
-const Templates = require('tps');
-
-const tps = new Templates('<template-to-use>');
-// ^ In js pass in the name to the template here
-
-const buildPaths = ['<build-paths...>'];
-// ^ In js build paths should always be an array
-
-tps.render('<some-directory-path>', buildPaths);
-// ^ In js we need to add a path to some directory so tps has a
-// starting directory. tps cli tools uses this node module
-// underneath the hood and uses the terminals current working
-// directory as the `<some-directory-path>` path
-```
-
-  </TabItem>
-</Tabs>
-
----
-
-<Example title="One Build Path" open>
-
-<Tabs groupId="cli-node">
-  <TabItem value="tps" label="tps cli">
-
-```bash
-# create command
-
-tps create --use=express-template app
-
-# or use command
-
-tps express-template app
-
-```
-
-  </TabItem>
-
-  <TabItem value="node" label="Node">
-
-```js showLineNumbers
-const Templates = require('tps');
-
-const tps = new Templates('express-template');
-
-const buildPaths = ['app'];
-
-tps.render(process.cwd(), buildPaths);
-```
-
-  </TabItem>
-</Tabs>
-
-</Example>
-
-<Example title="Long Build Path">
-
-<Tabs groupId="cli-node">
-  <TabItem value="tps" label="tps cli">
-
-```bash
-# create command
-
-tps create --use=express-template projects/app
-
-# or use command
-
-tps express-template projects/app
-```
-
-  </TabItem>
-
-  <TabItem value="node" label="Node">
-
-```js showLineNumbers
-const Templates = require('tps');
-
-const tps = new Templates('express-template');
-
-const buildPaths = ['projects/app'];
-
-tps.render(process.cwd(), buildPaths);
-```
-
-  </TabItem>
-</Tabs>
-
-</Example>
-
-<Example title="multiple build path">
-
-<Tabs groupId="cli-node">
-  <TabItem value="tps" label="tps cli">
-
-```bash
-# create command
-
-tps create --use=express-template app project/app app2
-
-# or use command
-
-tps express-template app project/app app2
-```
-
-  </TabItem>
-
-  <TabItem value="node" label="Node">
-
-```js showLineNumbers
-const Templates = require('tps');
-
-const tps = new Templates('express-template');
-
-const buildPaths = ['app', 'projects/app', 'app2'];
-
-tps.render(process.cwd(), buildPaths);
-```
-
-  </TabItem>
-</Tabs>
-
-</Example>
+Check out our [generating a instance](../generating-instance.mdx) guide to learn
+how to generate your new template.
