--- a/docs/docs/main/generating-instance.mdx
+++ b/docs/docs/main/generating-instance.mdx
@@ -5,6 +5,8 @@ pagination_next: null
 pagination_prev: null
 ---
 
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
 import { Button } from '@site/docs/components/button';
 import { Example } from '@site/docs/components/example';
 import styles from './intro.module.css';
@@ -221,6 +223,16 @@ tps my-template instance1 path/to/dir/instance2
 tps my-template
 ```
 
+:::tip
+
+Use the [list command](../api/cli#list) to see what templates are available.
+
+```bash
+tps list
+```
+
+:::
+
 <Example>
 
 If you wanted to use our [`react-component`](./templates/react-component.mdx)
@@ -265,18 +277,490 @@ tps react-component src/components/Nav src/components/Footer
 
 ## Using a Template's Options
 
-### Prompting
+Templates can define options to make their template more dynamic. Templates
+allows you to use these options in 3 main ways:
 
-### cli
+-   Interactive
+-   CLI
+-   Config file
+-   Aliases
+
+Hidden options are a special type of option that we will cover in the
+[hidden options section](#hidden-options).
+
+### Interactive
+
+The primary method of answering options is through interactive prompts. When you
+generate a new instance of a template, Templates will prompt you in the terminal
+all non hidden options then generate your instance.
+
+```bash
+tps react-component Nav
+? Would you like to use typescript (y/N)
+```
+
+If you press enter without typing anything, Templates will use the default value
+of the option as the answer.
+
+{/* ctrl + c */}
+
+### CLI
+
+Templates also supports using options on the command line. This allows you to
+quickly answer the option without having to go through all the prompts
+interactively.
+
+The name of the option will correspond directly to the option name.
+
+:::note
+
+When answering prompt on command line, you will no longer get prompted this
+option
+
+:::
+
+```bash
+tps some-template instance1 --optionName [value]
+```
+
+We recommend adding all options after your build path(s) in order to prevent
+needing a CLI separator `--`.
+
+<Tabs>
+
+<TabItem value="recommended" label="Recommended">
+
+```bash
+tps my-template app --option1 value1 --option2 value2 value3
+```
+
+</TabItem>
+<TabItem value="not-recommended" label="Not Recommended">
+
+```bash
+tps my-template --option1 value1 --option2 value2 value3 -- app
+```
+
+</TabItem>
+</Tabs>
+
+<Example>
+
+To use the `extension` option from
+[`react-component`](./templates/react-component.mdx), you can add a
+`--extension` flag to the CLI command:
+
+```bash
+tps express-app my-app --extension jsx
+```
+
+</Example>
+
+Now lets go over how to answer different types of prompts:
+
+###### Boolean
+
+When dealing with options that accept boolean answers, you will specify the
+option name on the cli without any value. To use a `true` value, just use the
+option name like the following:
+
+```bash
+--typescript
+```
+
+To use a `false` value, add a `no-` prefix in front of the option name:
+
+```bash
+--no-typescript
+```
+
+<Example>
+
+To use the `typescript` option from
+[`react-component`](./templates/react-component.mdx), you can do the following:
+
+```bash
+tps react-component Nav --typescript
+```
+
+If you dont want to use `typescript`, then you can do the following:
+
+```bash
+tps react-component Nav --no-typescript
+```
+
+</Example>
+
+###### Single values
+
+When dealing with options that accept a single value, you will specify the
+option name and value afterwards
+
+```bash
+--cssType less
+
+# or a number
+
+--age 23
+
+# or with =
+
+--type=something
+
+# if your value has spaces then you need wrap it with quotes
+
+--message "hey there everyone"
+```
+
+<Example>
+
+To use the `cssExtension` option from
+[`react-component`](./templates/react-component.mdx), you can do the following:
+
+```bash
+tps express-app app --cssExtension react
+```
+
+</Example>
+
+###### List
+
+When dealing with options that accept a list of values, you will specify the
+option name and all values afterwards
+
+```bash
+--ages 23 45 65
+
+# or strings
+
+--numbers ten nine five "forty five"
+```
+
+<Example>
+
+To use the `extras` option from a template named `my-template`, you can do the
+following:
+
+```bash
+tps my-template app --extras metrics unit e2e
+```
+
+</Example>
 
 ### Configuration file
 
-## Options
+Templates also supports answering prompts in our
+[configuration file](./tpsrc.mdx). When adding an answer to our config file,
+Templates will use this answer when generating a new instance and you will no
+longer be prompted for the option.
+
+To answer a templates option, you need to first specific the template name. Then
+you can add your answer to the `answers` object which takes a key/value pair of
+optionName/optionAnswer.
+
+```json title=".tpsrc"
+{
+    // highlight-start
+    "<template-name>": {
+        "answers": {
+            "<option-name>": "<option-answer>"
+        }
+    }
+    // highlight-end
+}
+```
+
+You can read more about how to use our configuration file in our
+[configuration guide](./tpsrc.mdx)
+
+<Example>
+
+To use the `typescript` option from
+[`react-component`](./templates/react-component.mdx), You can add `true` for the
+`typescript` option in your config file like the following:
+
+```json title=".tpsrc"
+{
+    "react-component": {
+        "answers": {
+            // highlight-next-line
+            "typescript": true
+        }
+    }
+}
+```
+
+After, you will no longer be prompted if you want to use typescript and your
+react components will always be generated in typescript.
+
+</Example>
+
+### Aliases
+
+Some Templates option's have aliases that you can use to answer the option. You
+can find these in the `aliases` column for your template's options. You can use
+these aliases just like any normal option name. The only exeption is single
+charater aliases which can be used on the CLI with only one `-` and then the
+single charater.
+
+```bash
+tps my-template app -t
+```
+
+<Example>
+
+To use the `typescript` option alias, `t`, from
+[`react-component`](./templates/react-component.mdx), you can do the following:
+
+```bash
+tps react-component Nav -t
+```
+
+If you dont want to use `typescript`, then you can do the following:
+
+```bash
+tps react-component Nav --no-typescript
+```
+
+</Example>
+
+### Hidden Options
+
+Hidden options are options that dont get prompted by default. These options
+usually allow for more fine modifications that are to combersome to ask every
+time. You can answer hidden options just like normal prompts (E.g. CLI, config
+file) with the excpetion of being asked interactively. In order to have hidden
+options get prompted, you can use the `hidden` option on the command line when
+generating a new instance.
+
+```bash
+tps my-template app --hidden
+```
+
+## Core Options
+
+Below will show you how to use some of Template's core options. You can find a
+full list of these options in the [Templates API docs](./../api/template.mdx).
+All core options can be specified on the CLI or in our
+[config file](./tpsrc.mdx).
+
+To use core options on the CLI, use the option name as a flag similar to how you
+would with [template's options](#cli).
+
+```bash
+tps my-template app --optionName optionValue
+```
+
+To use core options in our [config file](./tpsrc.mdx), Add them to the `opts`
+object for the template you want the options to have effect on.
+
+```txt title=".tps/tpsrc"
+{
+    "my-template": {
+        "opts": {
+            "optionName": "optionValue",
+        }
+    }
+}
+```
+
+:::caution
+
+Defining options in our [config file](./tpsrc.mdx) are only allowed at the
+template level. We dont support defining options that effect all templates.
+However this may change in the future.
+
+:::
+
+### Default
+
+By default, Templates will prompt you every non hidden option that does not have
+a defined value. To skip all these interactive prompts, you can use the
+`default` option which will have Templates use default values for each option.
+
+```bash
+tps my-template app --default
+```
+
+you can use this in conjunction with options on the CLI and in your
+[config file](./tpsrc.mdx)
+
+```bash
+tps my-template app --default --option1 value1 --option2
+```
 
 ### Wipe
 
+By default, Templates will throw an error if the directory it needs to create is
+already created or if any of the files it needs to create is already created. In
+order to force the creation of this instance, you can use the `wipe` option. The
+`wipe` option will delete any directories or files that Templates needs to
+created first then render your instance.
+
+```bash
+tps my-template app --wipe
+```
+
+This is very useful when you want to render a new instance of a instance you
+just created but with different options or etc.
+
+<Example>
+
+Lets say you have the following directory structure
+
+```text
+| - app
+    | - .tps/
+        | - ...
+    | - src/
+        // highlight-start
+        | - Home/
+            | - ...
+        // highlight-end
+```
+
+If I was trying to rendering a new instance of `react-component` template and
+called this `Home`, tps would error out because a `Home` directory already
+exists. However if you add the `--wipe` flag, tps will delete this directory
+first, then render your new instance in its place.
+
+```bash
+tps react-component src/Home --wipe
+```
+
+Will produce:
+
+```text
+| - app
+    | - .tps/
+        | - ...
+    | - src/
+        // highlight-start
+        | - Home/
+            | - <react-component template files ...>
+        // highlight-end
+```
+
+</Example>
+
 ### Force
 
-### Extending directory
+Very similar to the [`wipe`](#wipe) command, the `force` option will force the
+creation of any files that already exist. The main difference between these
+commands are `wipe` deletes folders and files while `force` only overrides any
+files that have conflicts.
 
-### default
+```bash
+tps my-template app --force
+```
+
+This is useful when you created an instance and added additional files and
+folder in your instance but you want to regenerate the instance with different
+options without your additional work.
+
+<Example>
+
+Lets say you have the following directory structure
+
+```text
+| - app
+    | - .tps/
+        | - ...
+    | - src/
+        // highlight-start
+        | - Home/
+            | - some-file.js
+        // highlight-end
+```
+
+If I was trying to rendering a new instance of `react-component` template and
+called this `Home`, tps would error out because a `Home` directory already
+exists. However if you add the `--force` flag, tps will force the creation of
+your instance but will only overwrite conflicting files.
+
+```bash
+tps react-component src/Home --force
+```
+
+<Tabs>
+<TabItem value="no-conflict" label="No conflicts">
+
+If the `react-component` template doesnt create a `some-file.js` then the
+original file will be left in place and not touched.
+
+```text
+| - app
+    | - .tps/
+        | - ...
+    | - src/
+        | - Home/
+            // highlight-next-line
+            | - some-file.js
+            | - <react-component template files ...>
+```
+
+</TabItem>
+
+<TabItem value="conflict" label="Conflicting file">
+
+If the `react-component` template was going to render a `some-file.js`, then the
+file will be overridden by the templates `some-file.js`.
+
+```text
+| - app
+    | - .tps/
+        | - ...
+    | - src/
+        | - Home/
+            // highlight-next-line
+            | - some-file.js <--- from react-component
+            | - <react-component template files ...>
+```
+
+Notice how `some-files.js` was not delete
+
+</TabItem>
+</Tabs>
+
+</Example>
+
+### Extending Directory
+
+Templates `extendDest` option allows you to extend each build path with a
+additional path. This additional path is added to the front of your build path
+and can be used in conjunction with a [long build path](#long-build-path).
+
+| Build Path(s) | extendDest | Result                 |
+| ------------- | ---------- | ---------------------- |
+| app           | myPath/    | myPath/app             |
+| subPath/app   | myPath/    | myPath/subPath/app     |
+| app app2      | myPath/    | myPath/app myPath/app2 |
+
+This option is very useful when you know your instances will be generated in a
+paticular directory every time and you dont want to type this out every time
+
+<Tabs>
+    <TabItem value="config" label="Config File">
+
+        You can add the `extendDest` to the `opts` object in your config file to always append a
+        path to every instance you create.
+
+        ```txt title=".tps/tpsrc"
+        {
+            "my-template": {
+                "opts": {
+                    "extendDest": "path/to/directory",
+                }
+            }
+        }
+        ```
+
+    </TabItem>
+
+    <TabItem value="CLI" label="CLI Option">
+
+        Sorry, not supported yet! Coming soon...
+
+    </TabItem>
+
+</Tabs>
