--- a/docs/docs/main/generating-instance.mdx
+++ b/docs/docs/main/generating-instance.mdx
@@ -14,24 +14,25 @@ import styles from './intro.module.css';
 # Generating an Instance
 
 Generating an instance of a template involves creating a new entity based on the
-contents of your template. During this process, templates will take the files
-and folders defined in the template and render them to your build path(s).
+template's contents. During this process, Templates takes the files and folders
+defined in the template and renders them to your build path(s).
 
 ## What is a Build Path
 
-The build path is a combination of an name and an optional location that you
-provide to templates. Templates uses this build path to determine where to
-render your instance file and folders.
+The build path is a combination of a name and an optional location that you
+provide to Templates. Templates uses this build path to determine where to
+render your instance.
 
-The `name` represents the instance identifer. Templates will create a new
-directory based off the name supplied and generate all templates contents into
-that directory.
+The `name` represents the instance identifier. Templates creates a new directory
+based on the supplied name—unless told not to—and generates all template
+contents into that directory. This `name` may also be used internally by the
+template in areas requiring a unique identifier.
 
-The `location` tell templates where to put this new instance. This is useful if
-you dont want your instance generated in the directory your in.
+The `location` specifies where Templates should place the new instance. This is
+useful if you don&apos;t want the instance generated in your current directory.
 
-The build path resembles a linux file path pattern and there are 4 main
-variations you can utilize:
+The build path follows a Linux-style file path pattern, and there are four main
+variations you can use
 
 -   Short build path
 -   Long build path
@@ -49,10 +50,9 @@ my-food-app
  ^ Build path and instance name
 ```
 
-Like mentioned before, templates creates a new directory with this `name` and
-renders the tenmplates contents into the directory. Templates also assigns this
-`name` as the instances `name`. This `name` can also be used internally by the
-template in places that require a name.
+Like mentioned earlier, Templates creates a new directory with this `name` in
+your cwd. It then renders the template’s contents into that directory and
+assigns the name as the instance’s identifier.
 
 Some examples of this could be:
 
@@ -63,7 +63,7 @@ Some examples of this could be:
 <Example>
 
 If we were generating a new instance of a template name `node-server` and we
-have the build path of `my-food-app` then templates will create a new directory
+have the build path of `my-food-app` then Templates will create a new directory
 called `my-food-app` and render all the templates contents inside of it
 
 ```text
@@ -88,21 +88,15 @@ projects/my-food-app
        ^ build path
 ```
 
-Templates still follows all the rules of a single build path. However the
-directory thats created based on the `name` is created inside the `location`. In
-case above, `my-food-app` instance will be created in the `projects` directory.
-
-:::note
-
-If the `location` is not a valid directory, then directory will be created in
-this process
-
-:::
+Templates still follows all the rules of a single build path. However, the
+directory thats created based on the `name` is created inside the `location`
+directory. If the `location` directory doesnt exist it will be created. In case
+above, `my-food-app` instance will be created in the `projects` directory.
 
 <Example>
 
 If we were generating a new instance of a template named `node-server` and we
-have the build path `code/projects/my-food-app` then templates will create a new
+have the build path `code/projects/my-food-app` then Templates will create a new
 directory called `my-food-app` inside of `<cwd>/code/projects` and render all
 the templates contents inside.
 
@@ -120,8 +114,8 @@ the templates contents inside.
 ### Multiple build paths
 
 Multiple build paths are a way to create multiple instances of a template in a
-single process. When defining multile build paths you can use a mix of short and
-long builds paths:
+single process. When defining multiple build paths, you can use a mix of short
+and long builds paths:
 
 ```text
 projects/my-food-app projects/my-gas-app my-food-app-2
@@ -129,18 +123,18 @@ projects/my-food-app projects/my-gas-app my-food-app-2
     ^ build path 1        ^ build path 2      ^ build path 3
 ```
 
-Templates will generate instances for all build paths and each instance's build
-path will follow the same rules as if you were just generating a single
-instance. While generating multiple instances may not make sense for every
-single template, this is very powerful when using a template that generates a
-subset of your application like a react component, Api route, background job
-file, etc.
+Templates generates an instance for every build path. Each instance is
+independant and follows the same process as if you were just generating the
+single instance. Generating multiple instances may not be ideal for every
+template, but it&apos;s especially useful for templates that create sections or
+pieces of an existing app—such as new React components, API routes, background
+job files, and more.
 
 <Example>
 
 If we were generating a new instance of a template named `node-server` and we
 have the build paths `projects/my-food-app` & `projects/my-gas-app` then
-templates will create both instances in the `projects` directory.
+emplates will create both instances in the `projects` directory.
 
 ```text title="Rendered instance"
 |- projects
@@ -158,7 +152,8 @@ templates will create both instances in the `projects` directory.
 
 Some template's dont need a build path to generate a new instance. This is
 because they dont need a new folder or any unique instance name to generate your
-content. Some examples of this can be a template that creates a eslint
+content. However, you will only be able to generate this instance in the
+directory you are located in. Some examples of this can be a eslint
 configuration file, jest configuration file, or anything in this similar vain.
 
 :::caution
@@ -184,15 +179,11 @@ specific a build path, it could create something like the following:
 
 :::note
 
-Templates will still allow you to provide a build path to a template that
-doesn't require one. Templates will still follow the rules of a build path and
-place all templates contents into it.
-
-If a build path is not supplied to a template that requires one, you will have
-unexpected result's. Templates has no knowledge of whether or not a template
-requires a build path and will not error out. This may change in future versions
-of templates. Always refer to the template's documention recommended way to use
-the template.
+Templates allow you to provide a build path to a template that doesn&apos;t
+require one. Currently, Templates have no way of determining whether a build
+path is required for a given template. However, this behavior may change in
+future versions. Always refer to the template&apos;s documentation for the
+recommended usage
 
 :::
 
@@ -211,13 +202,13 @@ any build paths afterward.
 
 ```bash
 # Short build path
-tps my-template instance1
+tps my-template buildPath1
 
 # Long build path
-tps my-template path/to/dir/instance1
+tps my-template path/to/dir/buildPath1
 
 # Multiple build paths
-tps my-template instance1 path/to/dir/instance2
+tps my-template buildPath1 path/to/dir/buildPath2
 
 # No build path
 tps my-template
@@ -277,8 +268,8 @@ tps react-component src/components/Nav src/components/Footer
 
 ## Using a Template's Options
 
-Templates can define options to make their template more dynamic. Templates
-allows you to use these options in 3 main ways:
+Template's can define options to make their template more dynamic. Templates
+allows you to use these options in 4 main ways:
 
 -   Interactive
 -   CLI
@@ -299,25 +290,18 @@ tps react-component Nav
 ? Would you like to use typescript (y/N)
 ```
 
-If you press enter without typing anything, Templates will use the default value
-of the option as the answer.
-
-{/* ctrl + c */}
+If you press `Enter` without typing anything, Templates will use the option's
+default value as the answer. You can also cancel the process by sending an
+interrupt signal (E.g `ctrl + c`).
 
 ### CLI
 
-Templates also supports using options on the command line. This allows you to
-quickly answer the option without having to go through all the prompts
-interactively.
-
-The name of the option will correspond directly to the option name.
-
-:::note
-
-When answering prompt on command line, you will no longer get prompted this
-option
-
-:::
+Templates supports using options directly on the command line, allowing you to
+quickly provide answers without going through all the prompts interactively. The
+command-line flag for each option corresponds to its name, prefixed with `--`.
+For example, if an option is named `hey`, the corresponding CLI flag would be
+`--hey`. **When you provide an answer using a CLI flag, Templates will skip
+prompting for that option.**
 
 ```bash
 tps some-template instance1 --optionName [value]
@@ -360,15 +344,15 @@ Now lets go over how to answer different types of prompts:
 
 ###### Boolean
 
-When dealing with options that accept boolean answers, you will specify the
-option name on the cli without any value. To use a `true` value, just use the
-option name like the following:
+When dealing with options that accept boolean values, specify the option name on
+the CLI without any value. To use a `true` value, simply use the option name as
+shown below:
 
 ```bash
 --typescript
 ```
 
-To use a `false` value, add a `no-` prefix in front of the option name:
+To use a `false` value, add the `no-` prefix in front of the option name:
 
 ```bash
 --no-typescript
@@ -383,7 +367,7 @@ To use the `typescript` option from
 tps react-component Nav --typescript
 ```
 
-If you dont want to use `typescript`, then you can do the following:
+If you don't want to use `typescript`, then you can do the following:
 
 ```bash
 tps react-component Nav --no-typescript
@@ -393,8 +377,8 @@ tps react-component Nav --no-typescript
 
 ###### Single values
 
-When dealing with options that accept a single value, you will specify the
-option name and value afterwards
+When dealing with options that accept a single value, specify the option name
+and value afterwards:
 
 ```bash
 --cssType less
@@ -407,7 +391,7 @@ option name and value afterwards
 
 --type=something
 
-# if your value has spaces then you need wrap it with quotes
+# if your value has spaces, wrap it with quotes
 
 --message "hey there everyone"
 ```
@@ -425,8 +409,8 @@ tps express-app app --cssExtension react
 
 ###### List
 
-When dealing with options that accept a list of values, you will specify the
-option name and all values afterwards
+When dealing with options that accept a list of values, specify the option name
+and all values afterwards:
 
 ```bash
 --ages 23 45 65
@@ -449,49 +433,46 @@ tps my-template app --extras metrics unit e2e
 
 ### Configuration file
 
-Templates also supports answering prompts in our
+Templates also support answering options in our
 [configuration file](./tpsrc.mdx). When adding an answer to our config file,
-Templates will use this answer when generating a new instance and you will no
+Templates will use this answer when generating a new instance, and you will no
 longer be prompted for the option.
 
-To answer a templates option, you need to first specific the template name. Then
-you can add your answer to the `answers` object which takes a key/value pair of
+To answer a template's option, you need to first specify the template name. Then
+you can add your answer to the `answers` object, which takes a key/value pair of
 optionName/optionAnswer.
 
 ```json title=".tpsrc"
 {
-    // highlight-start
     "<template-name>": {
         "answers": {
             "<option-name>": "<option-answer>"
         }
     }
-    // highlight-end
 }
 ```
 
 You can read more about how to use our configuration file in our
-[configuration guide](./tpsrc.mdx)
+[configuration guide](./tpsrc.mdx).
 
 <Example>
 
 To use the `typescript` option from
-[`react-component`](./templates/react-component.mdx), You can add `true` for the
+[`react-component`](./templates/react-component.mdx), you can add `true` for the
 `typescript` option in your config file like the following:
 
 ```json title=".tpsrc"
 {
     "react-component": {
         "answers": {
-            // highlight-next-line
             "typescript": true
         }
     }
 }
 ```
 
-After, you will no longer be prompted if you want to use typescript and your
-react components will always be generated in typescript.
+Afterward, you will no longer be prompted if you want to use TypeScript, and
+your React components will always be generated in TypeScript.
 
 </Example>
 
@@ -526,10 +507,10 @@ tps react-component Nav --no-typescript
 
 ### Hidden Options
 
-Hidden options are options that dont get prompted by default. These options
-usually allow for more fine modifications that are to combersome to ask every
-time. You can answer hidden options just like normal prompts (E.g. CLI, config
-file) with the excpetion of being asked interactively. In order to have hidden
+Hidden options are options that don't get prompted by default. These options
+usually allow for more fine modifications that are too cumbersome to ask every
+time. You can answer hidden options just like normal prompts (e.g., CLI, config
+file) with the exception of being asked interactively. In order to have hidden
 options get prompted, you can use the `hidden` option on the command line when
 generating a new instance.
 
@@ -551,14 +532,14 @@ would with [template's options](#cli).
 tps my-template app --optionName optionValue
 ```
 
-To use core options in our [config file](./tpsrc.mdx), Add them to the `opts`
+To use core options in our [config file](./tpsrc.mdx), add them to the `opts`
 object for the template you want the options to have effect on.
 
-```txt title=".tps/tpsrc"
+```json title=".tps/tpsrc"
 {
     "my-template": {
         "opts": {
-            "optionName": "optionValue",
+            "optionName": "optionValue"
         }
     }
 }
@@ -566,24 +547,24 @@ object for the template you want the options to have effect on.
 
 :::caution
 
-Defining options in our [config file](./tpsrc.mdx) are only allowed at the
-template level. We dont support defining options that effect all templates.
-However this may change in the future.
+Defining options in our [config file](./tpsrc.mdx) is only allowed at the
+template level. We don't support defining options that affect all templates.
+However, this may change in the future.
 
 :::
 
 ### Default
 
-By default, Templates will prompt you every non hidden option that does not have
-a defined value. To skip all these interactive prompts, you can use the
+By default, Templates will prompt you for every non-hidden option that does not
+have a defined value. To skip all these interactive prompts, you can use the
 `default` option which will have Templates use default values for each option.
 
 ```bash
 tps my-template app --default
 ```
 
-you can use this in conjunction with options on the CLI and in your
-[config file](./tpsrc.mdx)
+You can use this in conjunction with options on the CLI and in your
+[config file](./tpsrc.mdx):
 
 ```bash
 tps my-template app --default --option1 value1 --option2
@@ -592,21 +573,21 @@ tps my-template app --default --option1 value1 --option2
 ### Wipe
 
 By default, Templates will throw an error if the directory it needs to create is
-already created or if any of the files it needs to create is already created. In
-order to force the creation of this instance, you can use the `wipe` option. The
-`wipe` option will delete any directories or files that Templates needs to
-created first then render your instance.
+already created or if any of the files it needs to create are already created.
+To force the creation of this instance, you can use the `wipe` option. The
+`wipe` option will delete any directories or files that Templates need to create
+first, then render your instance.
 
 ```bash
 tps my-template app --wipe
 ```
 
-This is very useful when you want to render a new instance of a instance you
-just created but with different options or etc.
+This is very useful when you want to render a new instance of an instance you
+just created but with different options.
 
 <Example>
 
-Lets say you have the following directory structure
+Let's say you have the following directory structure:
 
 ```text
 | - app
@@ -619,16 +600,16 @@ Lets say you have the following directory structure
         // highlight-end
 ```
 
-If I was trying to rendering a new instance of `react-component` template and
-called this `Home`, tps would error out because a `Home` directory already
-exists. However if you add the `--wipe` flag, tps will delete this directory
+If you were trying to render a new instance of the `react-component` template
+and called this `Home`, tps would error out because a `Home` directory already
+exists. However, if you add the `--wipe` flag, tps will delete this directory
 first, then render your new instance in its place.
 
 ```bash
 tps react-component src/Home --wipe
 ```
 
-Will produce:
+This will produce:
 
 ```text
 | - app
@@ -647,20 +628,20 @@ Will produce:
 
 Very similar to the [`wipe`](#wipe) command, the `force` option will force the
 creation of any files that already exist. The main difference between these
-commands are `wipe` deletes folders and files while `force` only overrides any
-files that have conflicts.
+commands is that `wipe` deletes folders and files while `force` only overrides
+any files that have conflicts.
 
 ```bash
 tps my-template app --force
 ```
 
 This is useful when you created an instance and added additional files and
-folder in your instance but you want to regenerate the instance with different
-options without your additional work.
+folders in your instance but you want to regenerate the instance with different
+options without losing your additional work.
 
 <Example>
 
-Lets say you have the following directory structure
+Let's say you have the following directory structure:
 
 ```text
 | - app
@@ -673,9 +654,9 @@ Lets say you have the following directory structure
         // highlight-end
 ```
 
-If I was trying to rendering a new instance of `react-component` template and
-called this `Home`, tps would error out because a `Home` directory already
-exists. However if you add the `--force` flag, tps will force the creation of
+If you were trying to render a new instance of the `react-component` template
+and called this `Home`, tps would error out because a `Home` directory already
+exists. However, if you add the `--force` flag, tps will force the creation of
 your instance but will only overwrite conflicting files.
 
 ```bash
@@ -685,7 +666,7 @@ tps react-component src/Home --force
 <Tabs>
 <TabItem value="no-conflict" label="No conflicts">
 
-If the `react-component` template doesnt create a `some-file.js` then the
+If the `react-component` template doesn't create a `some-file.js`, then the
 original file will be left in place and not touched.
 
 ```text
@@ -704,7 +685,7 @@ original file will be left in place and not touched.
 <TabItem value="conflict" label="Conflicting file">
 
 If the `react-component` template was going to render a `some-file.js`, then the
-file will be overridden by the templates `some-file.js`.
+file will be overridden by the template's `some-file.js`.
 
 ```text
 | - app
@@ -716,8 +697,6 @@ file will be overridden by the templates `some-file.js`.
             | - some-file.js <--- from react-component
             | - <react-component template files ...>
 ```
-
-Notice how `some-files.js` was not delete
 
 </TabItem>
 </Tabs>
@@ -737,7 +716,7 @@ and can be used in conjunction with a [long build path](#long-build-path).
 | app app2      | myPath/    | myPath/app myPath/app2 |
 
 This option is very useful when you know your instances will be generated in a
-paticular directory every time and you dont want to type this out every time
+paticular directory every time and you dont want to type this out every time.
 
 <Tabs>
     <TabItem value="config" label="Config File">
