Fix broken links

--- a/docs/docs/api/template.mdx
+++ b/docs/docs/api/template.mdx
@@ -52,7 +52,7 @@ string;
 ```
 
 Optional path to add prepend to each
-[build path](/docs/main/create-new-template/templates#what-is-rendering-a-template).
+[build path](../main/generating-instance.mdx#what-is-a-build-path).
 
 <Tabs>
 <TabItem value="tpsrc" label=".tpsrc">
