--- a/docs/docs/main/create-new-template/dynamic-files-legacy.mdx
+++ b/docs/docs/main/create-new-template/dynamic-files-legacy.mdx
@@ -623,7 +623,7 @@ const {{= tps.name}} = (props) => {
 :::tip
 
 Dont remember what the template name is? Refresh your mind
-[here](./templates#single-build-path)
+[here](../generating-instance.mdx#what-is-a-build-path)
 
 :::
 
