--- a/docs/docs/main/create-new-template/dynamic-files.mdx
+++ b/docs/docs/main/create-new-template/dynamic-files.mdx
@@ -1519,8 +1519,8 @@ const {{= tps.name}} = (props) => {
 
 :::tip
 
-Dont remember what the template name is? Refresh your mind
-[here](./templates#single-build-path).
+Dont remember what the instance name is? Refresh your mind
+[here](../generating-instance.mdx#what-is-a-build-path).
 
 :::
 
