--- a/docs/docs/main/create-new-template/prompts.mdx
+++ b/docs/docs/main/create-new-template/prompts.mdx
@@ -543,8 +543,8 @@ app.use(helmet());
 
 The `aliases` option allows you to give aliases to your prompts. These aliases
 can be used when answer prompts either through the command line, node, or a
-[configuration file](../tpsrc.mdx) which we will cover more in detail in
-[how to answer prompts](#how-to-answer-prompts).
+[configuration file](../tpsrc.mdx). Take a look at our
+[aliases docs](../generating-instance.mdx#aliases) to learn how to use them.
 
 ```json title="settings.json"
 {
