--- a/docs/docs/main/templates/ai.mdx
+++ b/docs/docs/main/templates/ai.mdx
@@ -71,7 +71,7 @@ tps ai ./path/to/dir/[app-name]
 <TabItem value="default">
 
 ```bash
-tps ai funny-gifs
+tps ai my-express-app
 ```
 
 </TabItem>
@@ -79,7 +79,7 @@ tps ai funny-gifs
 <TabItem value="long build path">
 
 ```bash
-tps ai projects/funny-gifs
+tps ai projects/my-express-app
 ```
 
 </TabItem>
